--- a/assests/style.css
+++ b/assests/style.css
@@ -5,20 +5,25 @@
 }
 
 body{
-    background-color: white ;
+    background-color: lightblue ;
 }
 
 /* css rules for header html element starts here */
 .header {
-    padding: 20px;
+    padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: gray;
+    background-color: lightblue;
     color: black;
 }
 
 .header h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 40px;
+}
+
+.header img {
+    height: 150px;
+    width: 100px;
 }
 
 .header nav {
@@ -44,5 +49,16 @@ a {
     text-decoration: none;
 }
 
-/* figure html element starts here */
-.subtitle {}
+
+.subtitle {
+    padding: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    background-color:gray;
+    font-size: 20px;
+    color: black;
+}
+
+.subtitle h2 {
+    float: right;
+}
