--- a/assests/style.css
+++ b/assests/style.css
@@ -49,7 +49,7 @@ a {
     text-decoration: none;
 }
 
-
+/* css rules for subtitle starts here */
 .subtitle {
     padding: 50px;
     font-family: Arial, Helvetica, sans-serif;
@@ -62,3 +62,29 @@ a {
 .subtitle h2 {
     float: right;
 }
+/* css rules for subtitle ends here */
+
+/* footer html element css rules starts here */
+
+.contact h5 {
+   
+    font-size:20px;
+}
+.contact {
+    padding-top: 15px;
+    margin-right: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;   
+}
+
+.contact ul {
+    list-style-type: none;
+}
+
+.contact ul li {
+    
+    display: inline-block;
+   
+    
+}
+/* footer html element ends here */
