--- a/assests/style.css
+++ b/assests/style.css
@@ -51,6 +51,7 @@ a {
 
 /* css rules for subtitle starts here */
 .subtitle {
+    background-image: url("../assests/images/lightblue.jpg");
     padding: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
@@ -63,7 +64,18 @@ a {
     float: right;
 }
 /* css rules for subtitle ends here */
+/* css rules for work starts here */
+.project {
+    background-image: url("../assests/images/scott-graham-5fNmWej4tAA-unsplash.jpg");
+}
 
+.project2 {
+    background-image: url("../assests/images/binary.jpg");
+}
+
+.project3 {
+    background-image: url("../assests/images/lightblue.jpg");
+}
 /* footer html element css rules starts here */
 
 .contact h5 {
@@ -83,8 +95,6 @@ a {
 
 .contact ul li {
     
-    display: inline-block;
-   
-    
+    display: inline-block;   
 }
 /* footer html element ends here */
