--- a/assests/style.css
+++ b/assests/style.css
@@ -9,7 +9,12 @@ body{
 }
 
 /* css rules for header html element starts here */
+.flex-container {
+    display: flex;
+}
 .header {
+    display: flex;
+    
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightblue;
@@ -17,7 +22,7 @@ body{
 }
 
 .header h1 {
-    display: inline-block;
+    display: flex;
     font-size: 40px;
 }
 
@@ -27,20 +32,22 @@ body{
 }
 
 .header nav {
+    align-self: flex-end; 
+    flex-direction: row;
     padding-top: 15px;
     margin-right: 20px;
-    float: right;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 
 .header nav ul {
     list-style-type: none;
+    
 }
 
 .header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+    
+   
 }
 /* css rules for header html element ends here */
 
