--- a/assests/style.css
+++ b/assests/style.css
@@ -197,11 +197,11 @@ h3 {
 
 /* contact me main section  ends here */
 
-/* @media  screen and (max-width: 375px) { 
-    #About {
-        flex-wrap: wrap;
-        margin: 1000px;
-        background-color: green;
+  @media screen and (max-width: 800px) {  
+    .links {
+        flex-direction: column;
     }
-
-}*/
+    .space {
+        padding: 10px;
+    }
+}
