old project replaced with new project - Cure4Boredom

--- a/assests/style.css
+++ b/assests/style.css
@@ -157,8 +157,8 @@ h3 {
     height: 300px;
 }
 
-#Shopify {
-    background-image: url(../assests/images/project3.jpg);
+#cure4Boredom {
+    background-image: url(../assests/images/project_3new.jpg);
 }
 
 #AnimalArk {
