--- a/assests/style.css
+++ b/assests/style.css
@@ -161,8 +161,8 @@ h3 {
     background-image: url(../assests/images/project_3new.jpg);
 }
 
-#AnimalArk {
-    background-image: url(../assests/images/project4.jpg);
+#Unleashed {
+    background-image: url(../assests/images/prj3.jpg);
     background-size: cover;
   
 }
