new project added to site

--- a/assests/style.css
+++ b/assests/style.css
@@ -167,8 +167,8 @@ h3 {
   
 }
 
-#TheFoodGroup {
-    background-image: url(../assests/images/project5.jpg);
+#DEIcalendar {
+    background-image: url(../assests/images/prj5.jpg);
     height: 300px;
 
 }
